--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watchTS": " tsc --outDir ./public/assets/js ./src/main.ts --watch",
+    "eslint": "eslint .",
+    "prettier": "prettier --write .",
+    "linting": "npm-run-all --parallel prettier",
+    "watchSass": " sass --watch src/scss/main.scss ./public/assets/css/style.css ",
+    "start": "npm-run-all --parallel dev  watchTS watchSass"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
+    "@types/dompurify": "^3.0.5",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
+    "sass": "^1.75.0",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^1.2.2",
+    "dompurify": "^3.1.0",
+    "terser": "^5.30.3"
   }
 }
